# AMC-Orthosis-ADMM

ak40_can_ping/: ak40_can_ping.ino
ak40_can_run/: ak40_can_run.ino
ak40_can_velocity/: Config.h  MotionController.cpp  MotionController.h  MotorCAN.cpp  MotorCAN.h  SerialCommand.cpp  SerialCommand.h  Status.cpp  Status.h  ak40_can_velocity.ino
arduino_uno/ak40_can_velocity/: ak40_can_velocity.ino
arduino_uno/voice_control/: serial_control.py  test_mic.py  voice_control.py
components/edge_impulse/: CMakeLists.txt  README.txt
components/edge_impulse/model-parameters/: model_metadata.h  model_variables.h
components/edge_impulse/tflite-model/: tflite_learn_1053353_5_compiled.cpp  tflite_learn_1053353_5_compiled.h
esp32_code/: .gitignore  CMakeLists.txt  sdkconfig.defaults
esp32_code/main/: CMakeLists.txt  main.cpp
esp32_code/main/ak40_can_velocity/: MotionController.cpp  MotorCAN.h  Status.h
esp32_code/main/state_machine/: state_machine.cpp  state_machine.h
main/: CMakeLists.txt  main.cpp  microphone.cpp  microphone.h
main/ak40_can_velocity/: Config.h  MotionController.h  MotorCAN.cpp  MotorCAN.h  README_SPEEDRUN.md  SerialCommand.cpp  SerialCommand.h  Status.cpp  ak40_can_velocity.cpp  ak40_dashboard.py  send_cmd.py
main/classifier/: edge_impulse.cpp  edge_impulse.h
main/edge_impulse/tflite-model/: tflite_learn_1053353_5_compiled.cpp
main/enums/: command.h
main/microphone/: microphone.cpp  microphone.h
main/state_machine/: state_machine.cpp  state_machine.h
mic/: CMakeLists.txt  README.md
mic/main/: CMakeLists.txt  edge_impulse.cpp  main.cpp
notebooks/: generate-keyword-spotting-dataset.ipynb
